apps/Preferences/index.scss
.Window_Preferences {
  @import "./public/scss/notifTheme.css";
  @import "./node_modules/bootstrap/dist/css/bootstrap.min.css";
  @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
  @import "./node_modules/@progress/kendo-theme-default/dist/all.css";
  @import "./node_modules/react-phone-number-input/style.css";
  font-family: "Roboto";

  .input-field > label {
    font-size: 16px;
    color: #333 !important;
    margin-top: 3px !important;
    margin-bottom: 3px !important;
  }

  .row .col.s12.s6 {
    margin-bottom: 10px !important;
    margin-top: 10px !important;
  }

  .password {
    margin-bottom: 5px;
    margin-top: 5px;
  }

  .tabLayout {
    width: 100%;
    // border-bottom: solid 10px #333333;
    // border-top: solid 10px #333333;
    background-color: #333333;
    display: flex;
    flex-direction: row;
    margin: auto;
    button:hover {
      color: #f3b340;
    }
    button {
      flex-grow: 1;
      color: white;
      font-size: 1.5rem;
      display: flex;
      border: solid 3px #333333;
      border-bottom: solid 10px #333333;
      border-top: solid 10px #333333;
      flex-direction: row;
      align-items: center;
      span {
        font-size: 1rem;
        padding-left: 0.5rem;
        font-family: "Raleway", Arial, sans-serif;
      }
    }
  }

  .rwt__tabs[data-rwt-vertical="true"] {
    display: flex;
  }

  .rwt__tablist[aria-orientation="vertical"] {
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    flex-grow: 0;
    border-right: 1px solid #ddd;
    margin-right: 1rem;
  }

  .rwt__tab {
    background: transparent;
    border: 0;
    text-align: left;
    font-family: inherit;
    font-size: 18px;
    padding-left: 5px;
    transition: background 0.3s cubic-bezier(0.22, 0.61, 0.36, 1);

    > i {
      padding-left: 10px;
      padding-right: 10px;
    }
  }

  .rwt__tab[aria-selected="false"]:hover,
  .rwt__tab:focus {
    outline: 0;
    background-color: #f4f4f4;
    background-color: rgba(0, 0, 0, 0.05);
  }

  .rwt__tab[aria-selected="true"] {
    position: relative;
  }

  .rwt__tab[aria-selected="true"]:after {
    content: "";
    position: absolute;
  }

  .rwt__tablist:not([aria-orientation="vertical"])
    .rwt__tab[aria-selected="true"]:after {
    bottom: -9px;
    // border-radius: 55px;
    left: 0;
    width: 100%;
    border-bottom: 2.5px solid #ecececfc;
    transform: scaleY(1.5);
  }

  .rwt__tablist[aria-orientation="vertical"]
    .rwt__tab[aria-selected="true"]:after {
    right: -1px;
    top: 0;
    height: 100%;
    border-right: 3px solid #ffffff;
  }

  .rwt__tabs {
    height: 100%;
    width: 100%;
  }

  .rwt__tabpanel {
    width: 100%;
    overflow-y: auto;
    overflow-x: hidden;
    height: calc(100% - 109px);
  }

  .form {
    padding: 15px;
    position: relative;
  }

  .AvatarPicker-canvas {
    margin-top: 150px;
    position: relative;
  }

  #click1 {
    display: contents;
  }

  $accent: #00bcd4;
  $primary: #212121;
  $secondary: #727272;

  $scoreRed: #f44336;
  $scoreYellow: #ffeb3b;
  $scoreGreen: #4caf50;

  .password {
    display: block;
    position: relative;
    font-size: 15px;
    width: 100%;
    color: $secondary;

    &__input {
      display: block;
      text-transform: none;
      width: 100%;
      height: 42px;
      border-width: 0 0 1px;
      border-style: solid;
      border-color: #b6b6b6;
      font-weight: 400;
      color: $primary;

      &:focus,
      &:active {
        border-color: $accent;
        outline: 0;
      }
    }

    &__show {
      cursor: pointer;
      position: absolute;
      bottom: 23px;
      height: 16px;
      right: 0;
      background: $secondary;
      color: white;
      padding: 4px 8px;
      border-radius: 4px;
      font-weight: 700;
      font-size: 0.8em;
      margin-bottom: 10px;
    }

    &__strength {
      position: absolute;
      width: 0%;
      height: 4px;
      bottom: -8px;
      left: 0;
      background: transparent;
      transition: all 300ms ease-in-out;

      &[data-score="null"] {
        width: 0;
        background: red;
      }

      &[data-score="0"] {
        width: 5%;
        background: $scoreRed;
      }

      &[data-score="1"] {
        width: 25%;
        background: $scoreRed;
      }

      &[data-score="2"] {
        width: 50%;
        background: $scoreYellow;
      }

      &[data-score="3"] {
        width: 75%;
        background: $scoreGreen;
      }

      &[data-score="4"] {
        width: 100%;
        background: $scoreGreen;
      }
    }
  }

  .errorMsg {
    color: #cc0000;
    margin-bottom: 12px;
  }

  .password__show {
    background: #000;
  }

  #iconj {
    margin-top: 20px;
    margin-right: 5px;
    margin-bottom: 20px;
  }

  .errorMsg {
    color: #cc0000;
    margin-bottom: 12px;
  }

  #name {
    font-size: 15px;
    color: #333 !important;
  }

  .name {
    font-size: 15px;
    color: #333 !important;
  }

  .row {
    padding-bottom: 0% !important;
    padding-top: 0% !important;
    margin-bottom: 5px !important;
  }

  .tabHeader {
    font-size: 16px;
  }

  .marginsize {
    margin-bottom: 20px !important;
    margin-top: 29px;
    font-size: 16px;
  }

  .marginsize2 {
    margin-top: 22px !important;
    margin-bottom: 13px !important;
  }

  .about {
    margin-top: 0px !important;
  }

  .interest {
    margin-top: 13px !important;
  }

  .formmargin {
    margin-right: 2% !important;
    margin-left: 2% !important;
  }

  .gender {
    margin-top: 15px;
  }

  .marginstyle {
    margin-top: 19px;
  }

  #gender {
    font-size: 16px;
    padding-left: 5px;
  }

  #info {
    padding: 0% !important;
  }

  .country {
    margin-left: 16px;
    font-size: 16px;
    color: #343a40;
    margin-bottom: 20px !important;
    margin-top: 8px !important;
  }

  .dropdownstyle {
    margin-top: 15px !important;
    width: 100%;
    height: 40px;
    background: ghostwhite;
    margin-left: 15px;
    border: cornsilk;
  }

  #country {
    width: 100%;
    height: 35px;
    background: ghostwhite;
    border: cornsilk;
  }

  #rowdob {
    margin-bottom: 12px !important;
  }

  .k-datepicker {
    width: 100%;
  }

  #phoneno {
    margin-top: 5px !important;
    width: 125%;
    margin-bottom: 0px !important;
  }

  .textareaField {
    font-size: 17px;
    margin-top: 15px;
    width: 100%;
    border: 1px solid #9e9e9e;
  }

  div.click-to-top span {
    display: none;
    position: absolute;
    bottom: 0;
    left: 50px;
    right: 0;
    background: #333;
    width: 400px;
    color: #fff;
  }

  div.click-to-top:hover span {
    display: block;
  }

  .click-to-top {
    margin-left: -505px;
    margin-top: 4px;
  }

  div.datetooltip span {
    display: none;
    position: absolute;
    bottom: 0;
    top: 50px;
    left: 0;
    right: 0;
    background: #333;
    width: 390px;
    height: 90px;
    color: #fff;
  }

  div.datetooltip:hover span {
    display: block;
  }

  #dateicon {
    margin-top: 15px !important;
  }

  #labelname {
    font-size: 16px;
    color: black !important;
  }

  .timezone {
    font-size: 16px;
    color: #343a40;
  }

  div#localtimezone {
    line-height: 35px;
  }

  select {
    height: 35px;
    background: ghostwhite;
    border: cornsilk;
    width: 100%;
  }

  .dateformat {
    margin-left: -12px;
  }

  div.select.inner {
    height: 100px;
  }

  div.select.open {
    height: 100px;
  }

  div#datef,
  label#imageLabel,
  label#styleLabel,
  label#colorLabel,
  #iconsLabel,
  #soundsLabel {
    line-height: 40px;
    font-size: 16px;
    color: #343a40;
  }

  .imageBtn {
    color: white;
    background: #000;
    margin: 10px;
    padding: 4px;
    border-radius: 5px;
    cursor: pointer;
  }

  #row2 {
    padding-top: 0% !important;
    margin-bottom: 0px !important;
    align-items: baseline;
  }

  .preferencesRadio {
    transform: scale(1.5);
  }

  .radioLabel {
    padding-right: 25px;
  }

  .componentDiv {
    width: 99%;
  }

  .firstNameLabel,
  .lastNameLabel {
    color: #333;
    font-size: 16px;
  }

  .firstLastNameDiv {
    padding: 0px !important;
    margin-top: 20px;
  }

  .profileImageDiv {
    margin: auto;
    width: 170px;
    border-radius: 50%;
  }

  .profileImageDiv:hover .displayImage {
    opacity: 0.5;
  }

  .profileImageDiv:hover .middle {
    opacity: 1;
  }

  .text {
    color: black;
    font-size: 16px;
  }

  .middle {
    transition: 0.5s ease;
    opacity: 0;
    position: absolute !important;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;
  }

  .displayImage,
  .chooseWebcamDiv,
  .chooseImageDiv {
    width: 170px;
    height: 170px;
  }

  .displayImage {
    opacity: 1;
    border: 1px solid #9e9e9e;
  }

  .profileImage {
    margin: auto;
  }

  div.profileImage * {
    position: unset;
  }

  .imgBtn,
  .imgBtn1,
  .imgBtn2 {
    background-color: black;
    cursor: pointer;
    text-align: center;
  }

  .imgBtn1,
  .imgBtn2 {
    display: inline-block;
    margin: 1px;
    padding: 0px 14px;
  }

  .imgBtn2 {
    margin-top: 3px;
    padding: 0px 18px;
  }

  .chooseWebcamDiv,
  .chooseImageDiv {
    margin: auto;
  }

  .webCamImage {
    width: 150px;
    height: 150px;
    margin: auto;
    border: 1px solid #9e9e9e;
  }

  .webCam {
    border: 1px solid #9e9e9e;
  }

  .infoDiv {
    padding: 5px;
  }
  .mandatory:after {
    content: " *";
    color: #e02222;
    font-size: 16px;
  }

  .k-toolbar {
    top: 0px;
    position: sticky;
  }

  .colorPicker {
    height: 25px;
    padding: 1px;
  }

  .react-phone-number-input__icon {
    width: 29px;
    height: 21px;
  }
}

